--- a/round_1/assets/index.html
+++ b/round_1/assets/index.html
@@ -299,7 +299,7 @@
                 shownCards.delete(cardId);
             } else {
                 // Show the emoji
-                cardElement.textContent = card.Emoji;
+                cardElement.textContent = card.emoji;
                 shownCards.add(cardId);
                 
                 // Process the click to check for matches
